# NdkTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wangxi/ndktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ndk_file_crypt.cpp  ndk_file_utils.cpp
app/src/main/cpp/inc/: com_example_wangxi_ndktest_Cryptor.h  com_example_wangxi_ndktest_NDKFileUtils.h
app/src/main/java/com/example/wangxi/ndktest/: Cryptor.java  MainActivity.java  NDKFileUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/wangxi/ndktest/: ExampleUnitTest.java
